# advent-of-code-2025

./: day03.go  justfile  pyproject.toml
advent_of_code_2025/: day01.py  day02.py
day04/: main.go
